--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,13 +8,13 @@
     tools:context=".HomeActivity">
 
     <Button
-        android:id="@+id/start_button"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="เริ่มต้น"
         android:textColor="#6D5F69"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Exit_button"
+        app:layout_constraintEnd_toStartOf="@+id/exit"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,18 +22,18 @@
         app:layout_constraintVertical_bias="0.794" />
 
     <Button
-        android:id="@+id/Exit_button"
+        android:id="@+id/exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
         android:text="สิ้นสุด"
         android:textColor="#6D5F69"
-        app:layout_constraintBottom_toBottomOf="@+id/start_button"
+        app:layout_constraintBottom_toBottomOf="@+id/start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/start_button"
-        app:layout_constraintTop_toTopOf="@+id/start_button"
+        app:layout_constraintStart_toEndOf="@+id/start"
+        app:layout_constraintTop_toTopOf="@+id/start"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
